--- a/grammar.cfg
+++ b/grammar.cfg
@@ -58,7 +58,7 @@ return_statement = "return" expression? ";" ;
 
 expression = assignment ;
 
-assignment = ( call "." )? IDENTIFIER "=" assignment | logical ;
+assignment = ( call "." )? IDENTIFIER ( "=" | "+=" | "-=" ) assignment | logical ;
 
 logical = equality ( ( "and" | "or" ) equality )* ;
 
