Add support for conditional expressions

--- a/grammar.cfg
+++ b/grammar.cfg
@@ -58,7 +58,9 @@ return_statement = "return" expression? ";" ;
 
 expression = assignment ;
 
-assignment = ( call "." )? IDENTIFIER ( "=" | "+=" | "-=" ) assignment | logical ;
+assignment = ( call "." )? IDENTIFIER ( "=" | "+=" | "-=" ) assignment | conditional ;
+
+conditional = logical "?" logical ":" logical ;
 
 logical = equality ( ( "and" | "or" ) equality )* ;
 
