--- a/grammar.cfg
+++ b/grammar.cfg
@@ -60,11 +60,11 @@ expression = assignment ;
 
 assignment = ( call "." )? IDENTIFIER ( "=" | "+=" | "-=" ) assignment | conditional ;
 
-conditional = logical "?" logical ":" logical ;
+conditional = logical ( "?" logical ":" logical )? ;
 
-logical = equality ( ( "and" | "or" ) equality )* ;
+logical = equivalence ( ( "and" | "or" ) equivalence )* ;
 
-equality = comparative ( ( "!=" | "==" ) comparative )* ;
+equivalence = comparative ( ( "!=" | "==" ) comparative )* ;
 
 comparative = additive ( ( ">" | ">=" | "<" | "<=" ) additive )* ;
 
