Add power operator

--- a/txt/grammar.cfg
+++ b/txt/grammar.cfg
@@ -73,7 +73,9 @@ additive = multiplicative ( ( "-" | "+" ) multiplicative )* ;
 
 multiplicative = unary ( ( "/" | "*" ) unary )* ;
 
-unary = ( "!" | "-" ) unary | call ;
+unary = ( "!" | "-" | "try" ) unary | power ;
+
+power = call ( "^" unary ) ;
 
 call = primary ( "(" arguments? ")" | ( "." | ":" ) IDENTIFIER )* ;
 
