--- a/etc/grammar.cfg
+++ b/etc/grammar.cfg
@@ -4,6 +4,20 @@
 
 program = statement* EOF ;
 
+statement = block
+          | declaration
+          | echo_statement
+          | assert_statement
+          | if_statement
+          | while_statement
+          | for_statement
+          | break_statement
+          | continue_statement
+          | return_statement
+          | expression_statement ;
+
+block = "{" ( statement )* "}" ;
+
 declaration = variable_declaration | function_declaration | class_declaration ;
 
 variable_declaration = "var" IDENTIFIER ( "=" expression )? ";" ;
@@ -16,20 +30,6 @@ class_declaration = "class" IDENTIFIER ( "<" IDENTIFIER )?
                     "}" ;
 
 parameters = IDENTIFIER ( "," IDENTIFIER )* ;
-
-block = "{" ( statement )* "}" ;
-
-statement = block
-          | declaration
-          | echo_statement
-          | assert_statement
-          | if_statement
-          | while_statement
-          | for_statement
-          | break_statement
-          | continue_statement
-          | return_statement
-          | expression_statement ;
 
 expression_statement = expression ";" ;
 
@@ -82,10 +82,9 @@ call = primary ( "(" arguments? ")" | ( "." | ":" ) IDENTIFIER )* ;
 primary = "true" | "false" | "null" | "self"
         | NUMBER | STRING | IDENTIFIER
         | "(" expression ")"
-        | "super" "." IDENTIFIER
+        | "super" ":" IDENTIFIER
         | func_expr;
 
 func_expr = "def" "(" parameters? ")" block ;
 
 arguments = expression ( "," expression )* ;
-
