Add support for optional type annotations

--- a/etc/grammar.cfg
+++ b/etc/grammar.cfg
@@ -88,3 +88,11 @@ primary = "true" | "false" | "null" | "self"
 func_expr = "def" "(" parameters? ")" block ;
 
 arguments = expression ( "," expression )* ;
+
+# ------- #
+#  Types  #
+# ------- #
+
+single_type = identifier ( "::" identifier )* ( "[" type ( "," type )*  "]" )? ( "?" )? ;
+
+type = single_type ( "|" single_type )* ;
