Add support for callable type declarations

--- a/etc/grammar.cfg
+++ b/etc/grammar.cfg
@@ -93,6 +93,12 @@ arguments = expression ( "," expression )* ;
 #  Types  #
 # ------- #
 
-single_type = identifier ( "::" identifier )* ( "[" type ( "," type )*  "]" )? ( "?" )? ;
+atomic_type = identifier ( "::" identifier )* ( "?" )? ;
+
+container_type = atomic_type "[" type ( "," type )* "]" ;
+
+callable_type = atomic_type "(" ( type ( "," type )* )? ")" ;
+
+single_type = atomic_type | container_type | callable_type ;
 
 type = single_type ( "|" single_type )* ;
