--- a/etc/grammar.cfg
+++ b/etc/grammar.cfg
@@ -97,7 +97,7 @@ atomic_type = identifier ( "::" identifier )* ( "?" )? ;
 
 container_type = atomic_type "[" type ( "," type )* "]" ;
 
-callable_type = atomic_type "(" ( type ( "," type )* )? ")" ;
+callable_type = atomic_type ( "(" ( type ( "," type )* )? ")" )? ( "->" type )? ;
 
 single_type = atomic_type | container_type | callable_type ;
 
