Ignore everything in embed/ except the content of std/

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /build/
 /tests/compiled_module.so
+
+# Ignore everything in embed/ except the content of the std/ directory.
+/embed/*
+!/embed/std
